// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a hyphen if passed text is empty 1`] = `
<cert-card__title
  text=""
>
  <div
    className="cert-card__title"
    data-lego="react"
    style={Object {}}
  >
    —
  </div>
</cert-card__title>
`;

exports[`should render passed text 1`] = `
<cert-card__title
  text="haha"
>
  <div
    className="cert-card__title"
    data-lego="react"
    style={Object {}}
  >
    haha
  </div>
</cert-card__title>
`;
